@@ -64,7 +64,7 @@ $proc->set_data_handler(sub {
     #########################
 
     my @loc = $sym->get_loc();
-    is(scalar(@loc), 4, 'location size');
+    ok(scalar(@loc) >= 4, 'location size');
 
     # structure checked by Image.t
 
